--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A real time chat app with rooms",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "dstearle",
   "license": "MIT",
